# game-of-life-cpp

./: CMakeLists.txt  Makefile  README.md
src/: .basic.s.swp  .screen.cpp.orig  .screen.hpp.orig  basic.cpp  basic.hpp  game.cpp  game.hpp  init.cpp  init.hpp  main.cpp
